--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 95vh;
     transition: .5s;
 }
 
@@ -186,12 +186,12 @@ footer p {
     color: black;
 }
 
-@media only screen and (min-width: 401) and (max-width: 700px) {
+@media only screen and (min-width: 500px) and (max-width: 700px) {
     .container {
-        padding-left: 100px;
+        padding: 100px;
     }
     .box {
-        height: 650px;
+        height: 600px;
         width: 400px;
         margin: 0;
     }
@@ -255,17 +255,21 @@ footer p {
     .result-val {
         width: 400px;
         margin: 0 auto;
+    }
+
+    footer p {
+        text-align: center;
     }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (min-width: 401px) and (max-width: 499px) {
     .container {
-        padding-left: 100px;
+        padding: 100px;
     }
     .box {
-        height: 650px;
+        height: 580px;
         width: 400px;
-        margin: 0;
+        margin-left: 20px;
     }
 
     .box .age {
@@ -327,5 +331,170 @@ footer p {
     .result-val {
         width: 400px;
         margin: 0 auto;
+    }
+
+    footer p {
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 301px) and (max-width: 400px) {
+    .container {
+        padding: 100px;
+        font-size: smaller;
+    }
+    .box {
+        height: 580px;
+        width: 400px;
+        margin-left: 130px;
+    }
+
+    .box .age {
+        height: 100px;
+        width: 380px;
+        margin: 0 auto 10px;
+    }
+    
+    .box .age input {
+        width: 150px;
+    }
+    
+    .box .gender {
+        height: 50px;
+        width: 380px;
+        margin: 0 auto 10px;
+    }
+    
+    .box .values {
+        display: flex;
+        width: 410px;
+        margin: 0 0 0 12px;
+    }
+    
+    .values .height {
+        height: 100px;
+        width: 180px;
+    }
+    
+    .values .weight {
+        height: 100px;
+        width: 180px;
+    }
+    
+    .values .height input {
+        width: 90px;
+    }
+    
+    .values .weight input {
+        width: 90px;
+    }
+
+    .btn .calculate {
+        height: 50px;
+        width: 300px;
+        margin: 0 0 10px;
+    }
+    
+    .btn .reset {
+        height: 50px;
+        width: 80px;
+        margin: 0 0 10px;
+    }
+
+    .results-sec .result {
+        height: 40px;
+    }
+    
+    .result-val {
+        width: 400px;
+        margin: 0 auto;
+    }
+    footer {
+        width: 30rem;
+    }
+
+    footer p {
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .container {
+        padding: 100px;
+        font-size: smaller;
+    }
+    .box {
+        height: 580px;
+        width: 400px;
+        margin-left: 200px;
+    }
+
+    .box .age {
+        height: 100px;
+        width: 380px;
+        margin: 0 auto 10px;
+    }
+    
+    .box .age input {
+        width: 150px;
+    }
+    
+    .box .gender {
+        height: 50px;
+        width: 380px;
+        margin: 0 auto 10px;
+    }
+    
+    .box .values {
+        display: flex;
+        width: 410px;
+        margin: 0 0 0 12px;
+    }
+    
+    .values .height {
+        height: 100px;
+        width: 180px;
+    }
+    
+    .values .weight {
+        height: 100px;
+        width: 180px;
+    }
+    
+    .values .height input {
+        width: 90px;
+    }
+    
+    .values .weight input {
+        width: 90px;
+    }
+
+    .btn .calculate {
+        height: 50px;
+        width: 300px;
+        margin: 0 0 10px;
+    }
+    
+    .btn .reset {
+        height: 50px;
+        width: 80px;
+        margin: 0 0 10px;
+    }
+
+    .results-sec .result {
+        height: 40px;
+    }
+    
+    .result-val {
+        width: 400px;
+        margin: 0 auto;
+    }
+
+    footer {
+        width: 26rem;
+    }
+
+    footer p {
+        text-align: center;
     }
 }
